# blender-dmx

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ASSETS_ATTRIBUTION.md  CHANGELOG.md  DEPENDENCIES.md  DEVELOPMENT.md  README.md  RELEASE.md  __init__.py  __init__.py.orig  acn.py  artnet.py  blender_manifest.toml  blender_utils.py  color_utils.py  data.py  dmx.py  dmx_temp_data.py  fixture.py  gdtf.py  gdtf_file.py  gpl-header.txt  group.py  icon.py  in_gdtf.py  in_out_mvr.py  licenserc.toml  logging.py  logging_setup.py  material.py  mdns.py  model.py  mvr.py  mvr_objects.py  mvr_xchange.py  mvrx_protocol.py  network.py  node_arranger.py  osc.py  (+13 more)
fixtures/: spot.py  tube.py
i18n/: __init__.py  messages.pot  readme-i18n.txt  update.sh
ifaddr/: __init__.py  _posix.py  _win32.py
io_scene_3ds/: __init__.py  export_3ds.py  import_3ds.py
lib/: DEPENDENCIES.md
mvrxchange/: mvr_message.py  mvr_xchange_blender.py  mvrx_message.py  mvrx_tcp_client.py  mvrx_tcp_server.py  mvrx_ws_client.py
mvrxchange_protocol/: __init__.py
oscpy/: __init__.py  cli.py  client.py  parser.py  server.py  stats.py
panels/: classing.py  distribute.py  dmx.py  fixtures.py  groups.py  layers.py  programmer.py  recorder.py  setup.py  subfixtures.py
preferences/: __init__.py
pygdtf/: __init__.py  value.py
pymvr/: __init__.py  value.py
pypsn/: __init__.py
sacn/: __init__.py  receiver.py  sender.py  sender_test.py
scripts/: .gitignore  build_release.py  check-prints.py  check_wheel_md5.py  create_zeroconf_wheel.py  find_nested_symbols.py  get_testing_gdtfs.py  (+5 more)
(+334 files in other folders)
