[project]
name = "blender-dmx"
version = "2.1.2"
description = "Visualization & programming with GDTF&MVR, OSC, PSN, Networking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygdtf>=1.4.3",
    "pymvr>=1.0.6",
]

[dependency-groups]
dev = [
    "babel>=2.17.0",
    "isort>=6.0.0",
    "pip>=25.0",
    "pre-commit>=4.1.0",
    "ruff>=0.14.7",
]
